manifests/demo/00-simple_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
# Pod Spec
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
