manifests/demo/01-simple_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
# Define Deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    # Define Pod
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
