manifests/demo/20-nodeSelector_with_labels.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
# Define Deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    # Define Pod
    spec:
      # new nodeSelector Section
      nodeSelector:
        hardware: "pi5"
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
