manifests/demo/40-configmaps-secrets.yaml
# All of this is the same as 11-simple_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
# Define Deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    # Define Pod
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          # Instruct the container to pull the environment variable
