manifests/demo/50-persistent-volume.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      # NEW - Creates a small index.html inside the volume
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
      # NEW - Define the volumes
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: demo5-pvc
