manifests/demo/60-rolling_updates.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  # NEW - change-cause will be used later for tracking changes
  annotations:
    kubernetes.io/change-cause: "Initial deploy"
# Define Deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    # Define Pod
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.1-alpine   # pin the version so updates are explicit.
          ports:
            - containerPort: 80
          # NEW - Readiness Probe: Gates traffic until the pod is ready
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
          # NEW - Liveness Probe: Restarts the Pod if it becomes unhealthy
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
