manifests/demo/02-simple_deployment_with_service.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: nginx
# Define Deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app:nginx
  template:
    metadata:
      labels:
        app: nginx
      # Define Pod
      spec:
        containers:
          - name: nginx
            image: nginx:latest
            ports:
              - containerPort: 80
---
# Define Service
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
